# concordia-waze

./: .gitignore  PR_DESCRIPTION.md  README.md  package-lock.json  package.json  sonar-project.properties
.github/ISSUE_TEMPLATE/: acceptance-test.md  bug-report.md
.github/workflows/: backend-ci.yml  code-quality.yml  frontend-ci.yml
backend/: .gitignore  README.md  building_information.json  building_information_withAccessibility.json  go.mod  go.sum  hours_cache.json  main.go  placeid_cache.json  shuttle_information.json
backend/docs/: docs.go  swagger.json  swagger.yaml
backend/resource/: building_information.json  floor_information.json
campusData/GeoJsonDataParser/: .gitignore  CMakeLists.txt  conanfile.py
campusData/GeoJsonDataParser/Data/: output.json
campusData/GeoJsonDataParser/Data/CC/: hallways.geojson  rooms.geojson
campusData/GeoJsonDataParser/Data/LB/: LB-2.txt  LB-3.txt  LB-4.txt  LB-5.txt
campusData/GeoJsonDataParser/Data/MB/: POIs.geojson
campusData/GeoJsonDataParser/Data/VL/: POIs.geojson  VL-2.txt  VL-3.txt  rooms.geojson
campusData/GeoJsonDataParser/src/: main.cpp
campusFloormaps/: buildfloor.py
campusFloormaps/Data/: output.json
documentation/: Class_Diagram.xml  Component_Diagram.puml  Domain_Model.xml  ER_Diagram.xml
frontend/: .gitignore  README.md  app.config.ts  app.json  eas.json  jest.setup.js  package-lock.json  package.json  tsconfig.json
frontend/.maestro/: config.yaml
frontend/app/: +not-found.tsx  (+15 more)
scripts/: ConcordiaBuildingScrapper.py  dependency_graph.py  planning.py  requirements.txt  sprint5plan.md
(+485 files in other folders)
